wip: feat: add events, jobs and jobs repositories related to video format converting
